# aws_lambda_with_authoriser

./: .gitignore  Dockerfile  auth.py  aws_sign_v4.py  custom_signer.py  deploying_lambda.ipynb  deploying_models.ipynb  env.json  logger.py  no_auth_template.txt  pyproject.toml  requirements.txt  samconfig.toml  setup.py  signing.py  template.yaml  template_coginito.yaml  template_cognito.yaml  template_iam.yaml  template_lambda.yaml
.aws-sam/: build.toml
.github/workflows/: github_actions.yml
authorizer/: handler.py
src/: aws_sign_v4.py  cognito.py  custom_signer.py  logger.py  login_get_token.py
tests/: test_cognito.py
